# dressed-extended-rpa

./: Makefile.am  README  bootstrap  configure.ac  example.cfg
interactions/: Gpp_n3loC_hw12_e3fl.mhj
src/: Interaction.h  MatrixFactory.cpp  MatrixFactory.h  Modelspace.cpp  Modelspace.h  Term.h  angular_momentum.cpp  angular_momentum.h  determinant.h  drpa_main.cpp  erpa_main.cpp  exceptions.h  find_root.cpp  find_root.h  fit.cpp  fit.h  interaction_factories.cpp  interaction_factories.h  intervals.cpp  intervals.h  io.cpp  io.h  linalg.cpp  linalg.h  modelspace_factories.cpp  modelspace_factories.h  normalization.cpp  normalization.h  pandya.cpp  pandya.h  ph_interaction_factories.cpp  ph_interaction_factories.h  plot_eigenvalues.cpp  pp_interaction_factories.cpp  pp_interaction_factories.h  search.cpp  search.h  term_factories.cpp  term_factories.h
src/terms/: first_order.cpp  first_order.h  ladder.cpp  ladder.h  non_interacting.cpp  non_interacting.h  screening.cpp  screening.h  self_energy.cpp  self_energy.h
tests/: ModelspaceTest.cpp  angular_momentumTest.cpp  determinantTest.cpp  drpaTest.cpp  find_rootTest.cpp  fitTest.cpp  interaction_factoriesTest.cpp  intervalsTest.cpp  modelspace_factoriesTest.cpp  old_gmatrix_test.cpp  pandyaTest.cpp  ph_interaction_factoriesTest.cpp  pp_interaction_factoriesTest.cpp  searchTest.cpp
